# operations-software-varnish-libvmod-vslp

./: .gitignore  COPYING  Makefile.am  README.40.rst  README.rst  configure.ac
debian/: changelog  control  dirs  gbp.conf  libvmod-vslp.install  libvmod-vslp.manpages  rules
src/: Makefile.am  vmod_vslp.40.vcc  vmod_vslp.c  vmod_vslp.vcc  vslp_dir.c  vslp_dir.h  vslp_hash.c  vslp_hash.h
src/tests/: v01000.vtc  v01001.vtc  v01002.vtc  v01003.vtc  v01004.vtc  v01005.vtc  v01006.vtc  v01007.vtc  v01008.vtc  v01009.vtc  v01010.vtc
src/tests/v40/: v01004.vtc  v01005.vtc  v01006.vtc  v01007.vtc
src/tests/v41/: v01005.vtc
